[package]
name = "sm3"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"
license = "Apache-2.0"
description = "SM3 (ShangMi 3) hash function — GB/T 32905-2016. Pure-Rust, no_std, implements digest::Digest."
repository = "https://github.com/kintaiW/libsmx"
documentation = "https://docs.rs/sm3"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "hash", "sm3", "shangmi", "digest"]
readme = "README.md"

[dependencies]
digest = { workspace = true, features = ["block-api"] }

[dev-dependencies]
hex-literal = { workspace = true }
digest      = { workspace = true, features = ["dev"] }

[features]
default = []
oid     = ["digest/oid"]
